# web_gpu

./: .gitignore  Cargo.toml  README.md  class.drawio  index.html  litvinas-aidas.odp  temp.txt
pkg/: package.json  web_gpu.d.ts  web_gpu.js  web_gpu_bg.js  web_gpu_bg.wasm.d.ts
src/: app.rs  camera.rs  instances.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
