[package]
name = "web_gpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true

[dependencies]
# web
web-sys = { version = "0.3.83", features = ["Document", "Window", "Element"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
wgpu = { version = "28.0.0", features = ["webgl"] }

# core
anyhow = "1.0"
winit = { version = "0.30.0" }
pollster = "0.4.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"


# debug
env_logger = "0.11.8"
log = "0.4.29"
console_log = "1.0"
console_error_panic_hook = "0.1.6"

# cherry-picking features to avoid multithreading, which WASM currently doesn't support
[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

# wasm-pack doesn't enable bulk memory by default, must enable here
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-threads', '--enable-bulk-memory', '--all-features']